[gd_scene load_steps=11 format=3 uid="uid://ds00fm2wg81wp"]

[ext_resource type="Script" path="res://components/cardUI/hand_of_cards.gd" id="1_50x24"]
[ext_resource type="AudioStream" uid="uid://bv2nvqylpp8d3" path="res://audio/Paper_Grab_ShortDuration_01.ogg" id="3_dbsbv"]
[ext_resource type="AudioStream" uid="uid://b127dvvpf2fq4" path="res://audio/Paper_Grab_ShortDuration_02.ogg" id="4_wc7mt"]
[ext_resource type="AudioStream" uid="uid://bnobh4pyl614u" path="res://audio/Paper_Grab_ShortDuration_03.ogg" id="5_3h3ci"]
[ext_resource type="PackedScene" uid="uid://doa41q24r2eid" path="res://components/cards/card_base.tscn" id="6_i2kej"]
[ext_resource type="PackedScene" uid="uid://dnhhuvaiapr8k" path="res://components/cardUI/action_points.tscn" id="8_pqhre"]
[ext_resource type="PackedScene" uid="uid://c2s4d0va0x5gy" path="res://components/cardUI/deck_pile.tscn" id="9_0vxkf"]
[ext_resource type="PackedScene" uid="uid://babdevi0twph6" path="res://components/cardUI/discard_pile.tscn" id="10_c4w7l"]

[sub_resource type="Curve2D" id="Curve2D_wguu1"]
_data = {
"points": PackedVector2Array(-149.857, 10.7087, 149.857, -10.7087, 380, 0, -150.123, -9.96078, 150.123, 9.96078, 900, 0)
}
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_flf2n"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("3_dbsbv")
stream_1/stream = ExtResource("4_wc7mt")
stream_2/stream = ExtResource("5_3h3ci")

[node name="CardBattleHud" type="Node2D" node_paths=PackedStringArray("deckPileNode", "discardPileNode", "actionPointsNode", "addDiscardToDeckSpawnNode")]
position = Vector2(0, 720)
script = ExtResource("1_50x24")
deckPileNode = NodePath("DeckPileReadout")
discardPileNode = NodePath("DiscardAndBurn")
actionPointsNode = NodePath("ActionPoints")
addDiscardToDeckSpawnNode = NodePath("ShuffleDiscardToDeck")
metadata/_edit_vertical_guides_ = [640.0, 380.0, 900.0]
metadata/_edit_horizontal_guides_ = [455.0]

[node name="DeckPileReadout" parent="." instance=ExtResource("9_0vxkf")]
offset_left = 100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -80.0

[node name="DiscardAndBurn" parent="." groups=["SaveNodes"] instance=ExtResource("10_c4w7l")]
offset_left = 1089.0
offset_top = -264.0
offset_right = 1339.0
offset_bottom = 17.0
scale = Vector2(0.6, 0.6)

[node name="ActionPoints" parent="." groups=["SaveNodes"] instance=ExtResource("8_pqhre")]
offset_left = 95.0
offset_top = -264.0
offset_right = 223.0
offset_bottom = -136.0

[node name="CardArc" type="Path2D" parent="."]
curve = SubResource("Curve2D_wguu1")

[node name="PathFollow2D" type="PathFollow2D" parent="CardArc"]
position = Vector2(639.995, -7.75096)
rotation = 0.00102969
progress = 260.163

[node name="Card" parent="CardArc/PathFollow2D" instance=ExtResource("6_i2kej")]

[node name="PaperSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_flf2n")
volume_db = -20.0

[node name="ShuffleDiscardToDeck" type="Node2D" parent="."]

[connection signal="cards_drawn" from="DeckPileReadout" to="." method="addCardsToHand"]
